Sequenced Collections (#6880)
* Replace 'get(0)' with 'getFirst()'

* Replace '.add(0, ...)' with '.addFirst(...)'

* Replace index based calls with new methods