@@ -631,7 +631,7 @@ public class GalleryPanel {
             for (int i = firstIndices.getKey(); i <= stripes.size() - 1; i++) {
                 stripesWithinRange.add(stripes.get(i));
             }
-            stripesWithinRange.add(stripes.get(0));
+            stripesWithinRange.add(stripes.getFirst());
         } else if (firstIndices.getKey() != 0 && firstIndices.getKey() < lastIndices.getKey()) {
             // count up first stripe and last stripe are not "unstructured media"
             for (int i = firstIndices.getKey(); i <= lastIndices.getKey(); i++) {
@@ -639,7 +639,7 @@ public class GalleryPanel {
             }
         } else if (firstIndices.getKey() == 0) {
             // count down, first stripe is "unstructured media"
-            stripesWithinRange.add(stripes.get(0));
+            stripesWithinRange.add(stripes.getFirst());
             for (int i = stripes.size() - 1; i >= lastIndices.getKey(); i--) {
                 stripesWithinRange.add(stripes.get(i));
             }
@@ -699,7 +699,7 @@ public class GalleryPanel {
     private List<Pair<PhysicalDivision, LogicalDivision>> getMediaForwards(Integer firstIndex, Integer lastIndex,
                                                                               List<GalleryStripe> galleryStripes) {
         List<Pair<PhysicalDivision, LogicalDivision>> mediaWithinRange = new LinkedList<>();
-        GalleryStripe firstStripe = galleryStripes.get(0);
+        GalleryStripe firstStripe = galleryStripes.getFirst();
 
         if (galleryStripes.size() == 1) {
             for (int i = firstIndex; i <= lastIndex; i++) {
@@ -732,7 +732,7 @@ public class GalleryPanel {
     private List<Pair<PhysicalDivision, LogicalDivision>> getMediaBackwards(Integer firstIndex, Integer lastIndex,
                                                                                List<GalleryStripe> galleryStripes) {
         List<Pair<PhysicalDivision, LogicalDivision>> mediaWithinRange = new LinkedList<>();
-        GalleryStripe firstStripe = galleryStripes.get(0);
+        GalleryStripe firstStripe = galleryStripes.getFirst();
 
         if (galleryStripes.size() == 1) {
             for (int i = firstIndex; i >= lastIndex; i--) {
@@ -930,7 +930,7 @@ public class GalleryPanel {
         if (Objects.nonNull(
                 physicalDivision) && physicalDivision.hasMediaPartial() && !physicalDivision.getLogicalDivisions()
                 .isEmpty()) {
-            logicalDivision = physicalDivision.getLogicalDivisions().get(0);
+            logicalDivision = physicalDivision.getLogicalDivisions().getFirst();
         }
         dataEditor.getSelectedMedia().add(new ImmutablePair<>(physicalDivision, logicalDivision));
     }
@@ -946,7 +946,7 @@ public class GalleryPanel {
             return;
         }
 
-        Pair<PhysicalDivision, LogicalDivision> firstSelectedMediaPair = dataEditor.getSelectedMedia().get(0);
+        Pair<PhysicalDivision, LogicalDivision> firstSelectedMediaPair = dataEditor.getSelectedMedia().getFirst();
         Pair<PhysicalDivision, LogicalDivision> lastSelectedMediaPair =
                 new ImmutablePair<>(currentSelection.getView().getPhysicalDivision(), parentStripe.getStructure());
 
@@ -1045,7 +1045,7 @@ public class GalleryPanel {
             return false;
         }
 
-        PhysicalDivision firstPhysicalDivision = medias.get(0).getView().getPhysicalDivision();
+        PhysicalDivision firstPhysicalDivision = medias.getFirst().getView().getPhysicalDivision();
         if (Objects.isNull(firstPhysicalDivision)) {
             return false;
         }
