@@ -106,7 +106,7 @@ class IndexQueryPart implements UserSpecifiedFilter {
             Collection<String> restrictions) {
         if (lookfor.size() == 1) {
             restrictions.add(varName + "." + idField + (operand ? " IN (:" : " NOT IN (:") + parameterName + ')');
-            indexQueries.put(parameterName, Pair.of(filterField, lookfor.get(0)));
+            indexQueries.put(parameterName, Pair.of(filterField, lookfor.getFirst()));
         } else if (lookfor.size() >= 1) {
             int queryCount = 0;
             for (String lookingFor : lookfor) {
